change the client

--- a/clt_src/Makefile
+++ b/clt_src/Makefile
@@ -7,3 +7,6 @@ DEPENDS = conn/tcpclient.o main.o
 TARGET=client-bin
 $(TARGET):$(DEPENDS)
 	$(CC) $(CFLAGS) -o $@ $^
+
+clean:
+	rm -rf $(DEPENDS) $(TARGET)
