--- a/clt_src/Makefile
+++ b/clt_src/Makefile
@@ -2,10 +2,13 @@
 CC = gcc
 CFLAGS = -Iinclude
 
-DEPENDS = conn/tcpclient.o main.o
+DEPENDS = conn/tcpclient.o 
 
 TARGET=client-bin
-$(TARGET):$(DEPENDS)
+$(TARGET):$(DEPENDS) main.o
+	$(CC) $(CFLAGS) -o $@ $^
+
+client-test:$(DEPENDS) main-for_test.o
 	$(CC) $(CFLAGS) -o $@ $^
 
 clean:
