modified the client sem operation

--- a/srv_src/Makefile
+++ b/srv_src/Makefile
@@ -11,7 +11,7 @@ DEPENDS = main.o \
 	process/process_core.o process/id_process/chs_ct.o \
 	process/id_process/chs_ctr.o process/id_process/chs_pv.o \
 	process/id_process/id_chs.o server/clt_item.o server/server_core.o \
-	conn/conn_tcp.o
+	conn/conn_tcp.o process/statistics.o
 
 $(TARGET):$(DEPENDS)
 	$(CC) $(CFLAGS) $(DEBUG) $^ -o $@
